{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "GroundMovement",
            "id": "e1fcef3e-977a-4b83-8868-1fd9f51ea728",
            "actions": [
                {
                    "name": "DoMove",
                    "type": "Value",
                    "id": "65acde58-7e40-4733-a1bc-e4791368d12a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DoJump",
                    "type": "Button",
                    "id": "3eedaa00-9a41-4b63-88be-ee6cb3d10e4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DoCrouch",
                    "type": "Button",
                    "id": "afba0102-af2d-449b-8535-a58fd837665d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DoUse",
                    "type": "Button",
                    "id": "00e9422c-1ee6-4a4b-8fa9-6eca6f98f085",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Left/Right",
                    "id": "00a16fe1-0d11-4fc4-acc0-31bd8468ddd8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player2",
                    "action": "DoMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a0f3f37e-1be9-4a06-89a8-b8dd5239718f",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player2",
                    "action": "DoMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d42e0a64-aacc-4de0-bb59-7db6762ad328",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player2",
                    "action": "DoMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "205bc39b-6bec-4f91-919a-272c1f9ddb0e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player2",
                    "action": "DoJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b67c83b0-f709-4ae8-aefa-281aef776b26",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "DoJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18e08a8e-996d-4485-8f7b-eb014e55efcc",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player2",
                    "action": "DoCrouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa3886f0-88b2-4e26-a00a-8ed02018e780",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "DoCrouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8e6e1e3-aa1c-4658-b318-2c8ec2d0892a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player2",
                    "action": "DoUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81bf5ef4-e563-4924-a7cb-0aa6bc24b01c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "DoUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left/Right",
                    "id": "35c608b9-49b6-410f-9875-a67a9cd5b995",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "DoMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "56562605-4ad1-4cb0-8be4-c3c4e162d152",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "DoMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d903b012-ad47-48cc-8793-141fb9312045",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player1",
                    "action": "DoMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player1",
            "bindingGroup": "Player1",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Player1",
            "bindingGroup": "Player1",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Player2",
            "bindingGroup": "Player2",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}